--- a/Машины букеты/css/style.css
+++ b/Машины букеты/css/style.css
@@ -7,10 +7,13 @@ font-family: 'Oswald', sans-serif;
 }
 
 
-
+/* header */
 .header_nav{
 	height: 80px;
     box-shadow: 3px 7px 50px 0px #000000;
+}
+.bgColor{
+	background: #ff8989;
 }
 
 .header_nav img{
@@ -20,11 +23,14 @@ font-family: 'Oswald', sans-serif;
 }
 .header_content{
 	height: 87vh ;
-	background: #555;
+	background: #f7c0c0;
 }
+/* header */
+
 
 
 /*  carusel */
+
 .carousel-inner{
 	height: 400px;
 }
@@ -42,18 +48,25 @@ font-family: 'Oswald', sans-serif;
 }
 .itemImg{
 	width: 100%;
-	height: 100vh;
+	
 }
 
 .w-100 {
 	width: 100%!important;
-	height: 95vh;
+	height: auto;
 }
 /*  carusel */
 
+
+
+/* galer */
 .galer{
 	height: auto;
 }
+.bg-light{
+	background-color: #f39f9f !important;
+}
+
 .cardImg{
 	padding: 10px;
 	border-radius: 20px;
@@ -69,16 +82,15 @@ font-family: 'Oswald', sans-serif;
 .btnCard button{
 	width: 100%;
 }
+/* galer */
 
 
 
-
-
-
+/* costomer */
 
 .customer{
 	padding: 30px 0;
-	background:#2e2e2e;
+	background:#bb7070;
 }
 .Ava{
 	width: 150px;
@@ -86,12 +98,14 @@ font-family: 'Oswald', sans-serif;
 	padding: 10px;
 	height: 150px;
 }
+/* costomer */
 
 
 
-
-
-
+/* footer */
+.footer{
+	background: #7d4444;
+}
 
 .footerRow{
 	justify-content: center;
@@ -102,3 +116,4 @@ font-family: 'Oswald', sans-serif;
 	text-decoration: none !important;
 	color: #000 !important;
 }
+/* footer */
