--- a/Машины букеты/css/style.css
+++ b/Машины букеты/css/style.css
@@ -5,7 +5,9 @@ font-family: 'Oswald', sans-serif;
 	padding: 0;
 	margin: 0;
 }
-
+body{
+	background-color: #f5e0df;
+}
 
 /* header */
 .header_nav{
@@ -21,7 +23,6 @@ font-family: 'Oswald', sans-serif;
 	border-radius: 50%;
 	margin-right: 10px;
 }
-.header_content{
 .headerColor{
 	height: 87vh ;
 	background: #f7c0c0;
@@ -31,30 +32,43 @@ font-family: 'Oswald', sans-serif;
 
 
 /*  carusel */
-
+.carus{
+	
+}
+.py-5 {
+	padding: 20px!important;
+}
 .carousel-inner{
-	height: 400px;
+	height: auto;
+	padding-top: 20px;
+	padding-bottom: 40px;
 }
 .ol{
 	margin: 0;
 	padding-bottom: 10px;
 }
-
 .slide li {
 	width: 20px;
-	height: 10px;
+	height: 7px;
 	border-top: 0px solid transparent;
 	border-radius: 50%;
 	background: #000;
-}
-.itemImg{
-	width: 100%;
 	
 }
-
 .w-100 {
-	width: 100%!important;
-	height: auto;
+	width: auto !important;
+   height: 400px;
+	margin: 0 auto;
+	border-radius: 20px;
+	border: 6px solid #fb8989;
+	padding: 10px;
+}
+.card{
+	border: none;
+	background-color: #f5e0df;
+}
+.btn-outline-secondary {
+	background: #fff;
 }
 /*  carusel */
 
@@ -103,18 +117,26 @@ font-family: 'Oswald', sans-serif;
 }
 /* costomer */
 
-/* form blok */
+
 
 /* form blok */
 .formBlok{
-	width: ;
+	width: 70%;
 	height: auto;
 	margin: 0 auto;
 }
-
-.email{
-	border: 1px solid #495057;
+.form-group{
+	margin: 0;
 }
+.row{
+	padding: 20px 0;
+}
+.btn{
+	margin-right: 15px;
+	margin-left: 15px;
+}
+/* form blok */
+
 
 /* footer */
 .footerColor{
