--- a/Машины букеты/css/style.css
+++ b/Машины букеты/css/style.css
@@ -5,6 +5,7 @@ font-family: 'Oswald', sans-serif;
 	padding: 0;
 	margin: 0;
 }
+
 body{
 	background-color: #FFE7E0;
 }
@@ -41,6 +42,7 @@ body{
 .carus{
 	background: #FFA3BF;
 }
+
 .py-5 {
 	padding: 20px!important;
 }
@@ -80,9 +82,88 @@ body{
 .btn-outline-secondary {
 	background: #fff;
 }
-/*  carusel */
+/* carus */
 
 
+/* gals */
+.gals{
+	box-sizing: border-box;
+	height: 500px;
+   width: 300px;
+	margin: 20px auto;
+	background: #FFA3BF;
+}
+.gals img{
+		vertical-align: middle;
+}
+
+.container {
+	position: relative;
+ }
+ .mySlides {
+	display: none;
+	width: 100%;
+ }
+ .cursor {
+	cursor: pointer;
+ }
+ .prev,
+ .next {
+	cursor: pointer;
+	position: absolute;
+	top: 40%;
+	width: auto;
+	padding: 16px;
+	margin-top: -50px;
+	color: white;
+	font-weight: bold;
+	font-size: 20px;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+	-webkit-user-select: none;
+ }
+ .next {
+	right: 0;
+	border-radius: 3px 0 0 3px;
+ }
+ .prev:hover,
+ .next:hover {
+	background-color: rgba(0, 0, 0, 0.8);
+ }
+ .numbertext {
+	color: #f2f2f2;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
+ }
+ .caption-container {
+	text-align: center;
+	background-color: #222;
+	padding: 2px 16px;
+	color: white;
+ }
+ .rov{
+	 padding: 20px 0;
+ }
+ .rov:after {
+	content: "";
+	display: table;
+	clear: both;
+ }
+ .column {
+	float: left;
+	width: 16.66%;
+ }
+ .demo {
+	opacity: 0.6;
+ }
+ .active,
+ .demo:hover {
+	opacity: 1;
+ }
+
+/* gals */
 
 /* galer */
 .galer{
