--- a/Машины букеты/css/style.css
+++ b/Машины букеты/css/style.css
@@ -6,6 +6,19 @@ font-family: 'Oswald', sans-serif;
 	margin: 0;
 }
 
+h1,h2,h3,h4,h5,h6{
+	font-family: 'Oswald', sans-serif;
+}
+
+a,p,span{
+	font-family: 'Montserrat', sans-serif;
+}
+
+html{
+	scroll-behavior: smooth;
+	
+}
+
 body{
 	background-color: #FFE7E0;
 }
@@ -18,7 +31,6 @@ body{
 .navColor{
 	background: #52181A;
 }
-
 .header_nav img{
 	width: 50px;
 	border-radius: 50%;
@@ -37,20 +49,34 @@ body{
 /* header */
 
 
+#top{
+	position: fixed;
+	right: 25px;
+	bottom: 25px;
+	border-radius: 50%;
+	border: 1px solid #000;
+}
 
-
-
-
+#top img{
+	width: 25px;
+	height: 25px;
+}
 
 
 /* galer */
 .galer{
 	height: auto;
 }
+.galerTitle{
+	text-align: center;
+}
 .galerRow{
 	display: flex;
 	justify-content: center;
-	/* padding: 15px 0; */
+}
+.btnh{
+	height: 50px;
+	width: 200px;
 }
 .modal-dialog{
 	max-width: 660px;
@@ -75,20 +101,7 @@ body{
 	margin: 0;
 	padding: 5px;
 }
-
-
-
-
-
-
-
 /* galer */
-
-
-
-
-
-
 
 
 /* form blok */
@@ -101,6 +114,8 @@ body{
 	width: 70%;
 	height: auto;
 	margin: 0 auto;
+	padding-top: 50px;
+	padding-bottom: 70px;
 }
 .form-group{
 	margin: 0;
@@ -108,7 +123,7 @@ body{
 .row{
 	padding: 20px 0;
 }
-.btn{
+.btnForm{
 	margin-right: 15px;
 	margin-left: 15px;
 }
