--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,9 @@ font-family: 'Oswald', sans-serif;
 h1,h2,h3,h4,h5,h6{
 	font-family: 'Oswald', sans-serif;
 }
-
 a,p,span{
 	font-family: 'Montserrat', sans-serif;
 }
-
-
-
 html{
 	scroll-behavior: smooth;
 }
@@ -105,15 +101,14 @@ body{
 
 /* form blok */
 .titles{
-	width: 140px;
-	float: left;
+	
 }
 
 #form_message{
 	display: block;
-	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	box-shadow: 0 0 10px rgba(0,0,0,0.7);
 	border-radius: 5px;
-	margin:10px;
+	margin:0 auto;
 	padding: 10px;
 	width: 500px;
 	height: auto;
@@ -121,17 +116,16 @@ body{
 
 #form_message input,textarea{
 	border-radius: 5px;
-	width: 170px;
+	width: 70%;
 }
 
 #submit{
 	height: 50px;
-	float: right;
 }
 
 #form_message h2{
 	text-align: center;
-}ß
+}
 /* form blok */
 
 /* costomer */
@@ -159,12 +153,10 @@ body{
 	background: #7d4444;
 	color: #fff;
 }
-
 .footerRow{
 	justify-content: center;
 	text-decoration: none;
 }
-
 .footerItem{
 	width: 20%;
 	text-decoration: none !important;
