--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,15 @@ body{
 	#FFBAB5
 	#FFE7E0
 }
+.modal-dialog {
+	max-width: 600px;
+}
+.modal-body form{
+	align-items: center;
+}
 /* header */
 
-
+/* btn top */
 #top{
 	position: fixed;
 	right: 40px;
@@ -59,54 +65,63 @@ body{
 	width: 25px;
 	height: 25px;
 }
+/* btn top */
+
 
 /* galer */
-
 .galer{
 	width: 100%;
-	height: 400px;
+	height: 100vh;
 }
 
-.galerWrapper img {
--webkit-transform:scale(0.8); /*Webkit: уменьшаем размер до 0.8*/
--moz-transform:scale(0.8); /*Mozilla: масштабирование*/
--o-transform:scale(0.8); /*Opera: масштабирование*/
--webkit-transition-duration: 0.5s; /*Webkit: длительность анимации*/
--moz-transition-duration: 0.5s; /*Mozilla: длительность анимации*/
--o-transition-duration: 0.5s; /*Opera: длительность анимации*/
-opacity: 0.7; /*Начальная прозрачность изображений*/
-margin: 0 10px 5px 0; /*Интервалы между изображениями*/
-}
+#gallery {
+	position: relative;
+	padding-top: 50%;
+	-moz-user-select: none; 
+	user-select: none;
+ }
 
-.galerWrapper img:hover{
--webkit-transform:scale(1.1); /*Webkit: увеличиваем размер до 1.2x*/	-moz-transform:scale(1.1); /*Mozilla: масштабирование*/
--o-transform:scale(1.1); /*Opera: масштабирование*/
-box-shadow:0px 0px 30px gray; /*CSS3 тени: 30px размытая тень вокруг всего изображения*/
--webkit-box-shadow:0px 0px 30px gray; /*Webkit: тени*/
--moz-box-shadow:0px 0px 30px gray; /*Mozilla: тени*/
-opacity: 1;
-}
-
-.imgGall{
- max-width: 200px;
-}
-
+ #gallery img {
+	position: absolute;
+	top: 25%;
+	left: 12.5%;
+	max-width: 20%;
+	max-height: 40%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	cursor: zoom-in;
+	transition: .2s;
+ }
+ #gallery img:nth-child(4n-2) {left: 37.5%;}
+ #gallery img:nth-child(4n-1) {left: 62.5%;}
+ #gallery img:nth-child(4n) {left: 87.5%;}
+ #gallery img:nth-child(n+5) {top: 75%;}
+ 
+ #gallery img:focus {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 1;
+	max-width: 90%;
+	max-height: 80%;
+	outline: none;
+	pointer-events: none;
+ }
+ #gallery img:focus ~ div {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #fff;
+	cursor: zoom-out;
+ }
 /* galer */
-
-
-
-
-
-
-
 
 
 
 
 /* form blok */
-.titles{
-	
-}
 
 #form_message{
 	display: block;
@@ -117,20 +132,19 @@ opacity: 1;
 	width: 500px;
 	height: auto;
 }
-
 #form_message input,textarea{
 	border-radius: 5px;
 	width: 70%;
 }
-
 #submit{
 	height: 50px;
 }
-
 #form_message h2{
 	text-align: center;
 }
 /* form blok */
+
+
 
 /* costomer */
 .customer{
